2002-06-02  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.6 released.

2002-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * ImageMagick may now be built (static build only) using the
    free MinGW development package from http://www.mingw.org.
    Leonard's "clipboard" coder is included in the build.

2002-05-28  Leonard Rosenthol  <leonardr@lazerware.com>
  * Added new "clipboard" coder for reading/writing the system's
    clipboard.  Currently this is only implemented on Windows.
    For example:  'convert logo: clipboard:', 'convert clipboard: foo.png'

2002-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Support autotrace via delegates.mgk.
    For example:  'convert autotrace:file.png file.mvg'

2002-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added progress monitor support to DrawImage().

2002-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added progress monitor support to wmf.c.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added EscapeText() to utility.c to support escaping text.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Text escaping for -draw and DrawAnnotation was not working properly.
    Now it does.  Backslash should act as a escape for the the active
    quote character (', ", or }) as well as backslash.  The backslash
    should be discarded if it was used as an escape character.  In order
    to reliably pass a backslash, two successive backslashes are required
    (e.g. "\\").

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified Base64Encode() of utility.c so that it returns the number of
    characters encoded. This avoids having to invoke strlen() on possibly
    megabytes of data.

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fixed compilation error with Sun Workshop compiler (wmf.c).

2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>