@@ -110,8 +110,9 @@ static void MogrifyUsage(void)
       "-dispose method      GIF disposal method",
       "-dither              apply Floyd/Steinberg error diffusion to image",
       "-draw string         annotate the image with a graphic primitive",
-      "-edge radius          apply a filter to detect edges in the image",
+      "-edge radius         apply a filter to detect edges in the image",
       "-emboss radius       emboss an image",
+      "-encoding type       type of font encoding",
       "-endian type         LSB or MSB",
       "-enhance             apply a digital filter to enhance a noisy image",
       "-equalize            perform histogram equalization to an image",
@@ -742,6 +743,16 @@ static unsigned int MogrifyUtility(int argc,char **argv)
                 i++;
                 if ((i == argc) || !sscanf(argv[i],"%lf",&sans))
                   MagickFatalError(OptionFatalError,"Missing radius",option);
+              }
+            break;
+          }
+        if (LocaleCompare("encoding",option+1) == 0)
+          {
+            if (*option == '-')
+              {
+                i++;
+                if (i == argc)
+                  MagickFatalError(OptionFatalError,"Missing encoding type",option);
               }
             break;
           }
